--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -43,6 +43,12 @@ html, body {
     text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
 }
 
+.empty {
+    margin-top: 30px;
+    font-size: 4vw;
+    font-weight: 200;
+}
+
 .battle {
     @media screen and (max-width: 900px) {
         width: 100%;
