--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -111,12 +111,32 @@ html, body {
         }
     }
     &__player-count{
+        display: flex;
+        align-items: center;
+        margin-right: 8px;
+        img {
+            margin-left: 3px;
+            max-height: 18px;
+        }
+    }
+    &__spectator-count{
+        display: flex;
+        align-items: center;
+        img {
+            margin-left: 3px;
+            max-height: 18px;
+        }
+    }
+    &__max-players{
+        margin-left: 5px;
     }
     &__players{
+        height: 100%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        align-items: center;
     }
     &__player{
         background: rgba(255, 255, 255, 0.2);
