--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -94,6 +94,14 @@ html, body {
         margin-top: 1px;
         padding: 4px 7px;
     }
+    &__ingame{
+        display: flex;
+        align-items: center;
+        margin-right: 3px;
+        img {
+            max-height: 18px;
+        }
+    }
     &__title{
         text-align: left;
     }
@@ -152,13 +160,6 @@ html, body {
         }
     }
     &__flag{
-
-    }
-    &__ingame{
-        display: flex;
-        img {
-            max-height: 16px;
-        }
     }
     &__username{
         font-size: 13px;
