--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -93,6 +93,7 @@ html, body {
         align-items: center;
         margin-top: 1px;
         padding: 4px;
+        font-size: 16px;
     }
     &__ingame{
         display: flex;
@@ -143,17 +144,17 @@ html, body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 10px;
-        justify-content: center;
-        align-items: center;
+        margin: 20px 4px 4px 5px;
+        justify-content: left;
+        align-items: flex-end;
     }
     &__player{
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(0, 0, 0, 0.9);
         display: flex;
         align-items: center;
         margin: 2px;
         padding: 2px 6px;
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        //border: 1px solid rgba(255, 255, 255, 0.3);
         border-radius: 3px;
         & > div {
             margin: 0 2px;
